<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/assignmentNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/assignment_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_marginTop="6dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="@+id/dueDateEditText"
        app:layout_constraintStart_toStartOf="@+id/dueDateEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dueDateEditText"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/date_format"
        android:inputType="date|datetime|text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addCoursesButton"
        app:layout_constraintTop_toBottomOf="@+id/addItemButton" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseSpinner" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/card_back"
        android:contentDescription="@string/scroll_view_thing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:id="@+id/assignmentListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:contentDescription="@string/course_id_spinner"
        app:layout_constraintStart_toStartOf="@+id/assignmentNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/assignmentNameEditText" />

    <Button
        android:id="@+id/addCoursesButton"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_courses"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/assignmentNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/assignmentNameEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>