<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/courseTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/course_1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseCodeTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cop_1000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/courseTitleTextView"
        app:layout_constraintStart_toEndOf="@+id/courseTitleTextView" />

    <TextView
        android:id="@+id/courseColorTextView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/purple"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/courseCodeTextView"
        app:layout_constraintTop_toTopOf="@+id/courseCodeTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>