<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditCourseActivity">

    <TextView
        android:id="@+id/newCourseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/new_course"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/courseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/courseid"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCourseTextView" />

    <Spinner
        android:id="@+id/courseColorSpinner"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:entries="@array/colors"
        app:layout_constraintStart_toEndOf="@+id/courseEditText"
        app:layout_constraintTop_toTopOf="@+id/courseEditText" />

    <Button
        android:id="@+id/courseSaveButton"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/save_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseEditText" />

    <Button
        android:id="@+id/courseCancelButton"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/courseSaveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>