<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/colorIndicatorImageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_blue_square" />

            <TextView
                android:id="@+id/courseIdTextView"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/cop_3300"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colorIndicatorImageView" />

            <TextView
                android:id="@+id/assignmentNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/chapter_4_ui_design"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/courseIdTextView"
                app:layout_constraintTop_toTopOf="@+id/courseIdTextView"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/removeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#D1D1D1"
                android:contentDescription="@string/remove_item_description"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_trash_can_remove"
                app:iconGravity="top"
                app:iconSize="40dp"
                app:iconTint="#776F6F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dueDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_31_03_2023"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/dueDateTitleTextView"
                app:layout_constraintStart_toEndOf="@+id/dueDateTitleTextView"
                app:layout_constraintTop_toTopOf="@+id/dueDateTitleTextView" />

            <TextView
                android:id="@+id/dueDateTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/due_date"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/colorIndicatorImageView"
                app:layout_constraintStart_toEndOf="@+id/colorIndicatorImageView"
                app:layout_constraintTop_toTopOf="@+id/colorIndicatorImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>